# python_programming

ncmv_pyprojects/: pyproject.toml
ncmv_pyprojects/cep/: __init__.py  cep.py  cep_intervals.py
ncmv_pyprojects/logging_format/: __init__.py
ncmv_pyprojects/src/logging/: __init__.py  default_format.py
ncmv_pyprojects/src/simple_math/: __init__.py
ncmv_pyprojects/test/: pytest_cep.py
study/basis/: access_modifiers.py  arguments.py  ascii.py  bitwise.py  boolean.py  built_in_funcs.py  callables.py  callbacks.py  classes.py  closures.py  collections.py  context_manager.py  custom_sort_comp.py  data_classes.py  date_time.py  decorators.py  deep_copy.py  dicts.py  duck_typing.py  dunders.py  exceptions.py  file_wildcards.py  files.py  filter.py  for_loop.py  functions.py  generators.py  generic.py  if_else.py  inheritance.py  interfaces.py  iterables.py  iterators.py  lambdas.py  lists.py  math_operations.py  metaclasses.py  method_resolution_orders.py  modules.py  operators.py  (+18 more)
study/data_structures_and_algorithms/algorithms/divide_and_conquer/: binary_search.py  ternary_search.py
study/data_structures_and_algorithms/data_structures/array/: test.py
study/data_structures_and_algorithms/data_structures/heap/: heap_util.py  two_heaps.py
study/data_structures_and_algorithms/data_structures/linked_list/: test.py
study/design_patterns/Singleton/: via_metaclass.py
study/design_patterns/singleton/: via_decorator.py
study/matplotlib/: 01.py  01_plot_basic.py  02.py  02_plot_multi_axis.py  03.py  03_plot_multi_subplots.py  04.py  04_plot_more_about_axes.py  05.py  05_plot_time_series_template.py  06.py  06_plot_annotate.py  07.py  07_plot_more_about_locators.py  08.py  08_plot_more_about_formatter.py  09.py  10.py  11.py  12.py  13.py  14.py
study/oop/design_patterns/abstract_factory/: basic_af.py
study/oop/design_patterns/adapter/: adapter_class.py  adapter_object.py
study/oop/design_patterns/bridge/: basic_bridge.py  remote_device_example.py
study/oop/design_patterns/builder/: basic_builder.py
study/oop/design_patterns/chain_of_responsibility/: basic_cor.py
study/oop/design_patterns/command/: basic_command.py
study/oop/design_patterns/composite/: basic_composite.py  graphic_composite.py
study/oop/solid_principles/: d.py  i.py  l.py  o.py  s.py
study/openpyxl/: basic_openpyxl.py  sample.xlsx
study/pyproject/: LICENSE  pyproject.toml
study/pyproject/hello_pyproject/: __init__.py  __main__.py
study/pyproject/pyproject_example/: __init__.py  __main__.py
study/pyproject/simple_math/: __init__.py  __main__.py
study/pyproject/src/pyproject_example/: __main__.py  greeting.py
study/pyproject/src/simple_math/: __main__.py
study/setuptools/: LICENSE  README.md  setup.py
study/setuptools/setuptools_example/: __init__.py  __main__.py  submodule.py
study/threading/: basic.py  daemon_thread.py  sync_with_barrier.py  sync_with_bounded_semaphore.py  sync_with_cond.py  sync_with_event.py  sync_with_lock.py  sync_with_rlock.py  sync_with_semaphore.py  sync_with_threadsafe_queue.py  thread_status.py  threadpool_executor.py
(+23 files in other folders)
