[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject_example"
version = "0.1.0"
description = "Study pyproject.toml"
readme = "README.md"
authors = [{ name = "Vu Nguyen", email = "nguyenchiemminhvu@gmail.com" }]
maintainers = [
    { name = "maintainer 1", email = "ncmv_maintainer1@gmail.com" },
    { name = "maintainer 2", email = "ncmv_maintainer2@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [ 
    "matplotlib>=3.10",
    "numpy>=1.20"
]

[project.urls]
Homepage = "https://github.com/nguyenchiemminhvu/python_programming/tree/main/study/pyproject"
Documentation = "https://github.com/nguyenchiemminhvu/python_programming/tree/main/study/pyproject"

[project.scripts]
pyproject_example = "pyproject_example.__main__:main"
simple_math = "simple_math.__main__:main"
